RESOLVED FIXED48449
borders don't work right with vertical RenderInlines
https://bugs.webkit.org/show_bug.cgi?id=48449
Summary borders don't work right with vertical RenderInlines
Dave Hyatt
Reported 2010-10-27 11:43:45 PDT
The left/right borders should always paint, and it is the top and bottom ones that should be omitted on interior line boxes.
Attachments
Patch (209.89 KB, patch)
2010-10-27 12:37 PDT, Dave Hyatt
bdakin: review+
Dave Hyatt
Comment 1 2010-10-27 12:37:39 PDT
Dave Hyatt
Comment 2 2010-10-27 12:48:26 PDT
Fixed in r70692.
Note You need to log in before you can comment on or make changes to this bug.