https://bugs.webkit.org/show_bug.cgi?id=48449

Reviewed by Beth Dakin.

Make border drawing work correctly with vertical inline flows.  The top and bottom edge have to be omitted
rather than the left and right edges.

Also discovered that border-radius is broken with the new path-based-drawing code for all inline flows.  This
is a regression from the old drawing code.  I patched the code to be correct rather than clipping out stuff
that it shouldn't and applying border-radii on lines that don't even have them.

Added fast/blockflow/border-vertical-lr.html and fast/borders/border-radius-inline-flow.html

WebCore:

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::paintBorder):
(WebCore::RenderBoxModelObject::clipBorderSidePolygon):
* rendering/RenderBoxModelObject.h:

LayoutTests:

* fast/blockflow/border-vertical-lr.html: Added.
* fast/borders/border-radius-inline-flow.html: Added.
* platform/mac/fast/blockflow/border-vertical-lr-expected.checksum: Added.
* platform/mac/fast/blockflow/border-vertical-lr-expected.png: Added.
* platform/mac/fast/blockflow/border-vertical-lr-expected.txt: Added.
* platform/mac/fast/borders/border-radius-inline-flow-expected.checksum: Added.
* platform/mac/fast/borders/border-radius-inline-flow-expected.png: Added.
* platform/mac/fast/borders/border-radius-inline-flow-expected.txt: Added.



Canonical link: https://commits.webkit.org/61213@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70692 268f45cc-cd09-0410-ab3c-d52691b4dbfc